--- a/Drunken/Drunken/Drunken/Launch Screen.storyboard
+++ b/Drunken/Drunken/Drunken/Launch Screen.storyboard
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23084"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -24,7 +23,7 @@
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
-                        <color key="backgroundColor" systemColor="systemGreenColor"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="2cC-Gb-VPU" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="i4H-pR-QUm"/>
                             <constraint firstItem="Bcu-3y-fUS" firstAttribute="trailing" secondItem="2cC-Gb-VPU" secondAttribute="trailing" constant="10" id="kuM-hq-Q9f"/>
@@ -40,8 +39,5 @@
     </scenes>
     <resources>
         <image name="launch_screen" width="341.33334350585938" height="341.33334350585938"/>
-        <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
     </resources>
 </document>
